# tezedge

./: .dockerignore  .drone.backup.yml  .drone.longrunning.yml  .drone.yml  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.MD  README.md  RELEASE_CHECKLIST.md  check_for_new_image.sh  docker-compose.debug.yml  docker-compose.debugger.yml  docker-compose.distroless.yml  docker-compose.full.latest-release.yml  docker-compose.latest.yml  docker-compose.sandbox.latest.yml  docker-compose.sandbox.yml  docker-compose.storage.irmin.yml  docker-compose.storage.memory.yml  docker-compose.storage.persistent.yml  docker-compose.yml  docker-debugger.sh  docker-entrypoint.sh  run.sh  run_mem_env.sh  synchronize_ci.sh  test.sh  tezos-docker-compose.yml  versions.sh
action_sync/: Cargo.toml
action_sync/src/: file.rs  lib.rs
apps/baker/: Cargo.toml  Dockerfile  README.md  report.py  tezedge.env  tezos-baker-012-Psithaca
apps/deploy_monitoring/: Cargo.toml  README.md  debugger-config.toml  docker-compose.debugger.yml  docker-compose.deploy.florencenet.latest.yml  docker-compose.deploy.latest-release.yml  docker-compose.deploy.latest.yml  docker-compose.deploy.mainnet.latest-release.yml  docker-compose.localhost.yml  docker-compose.tezedge_and_explorer.yml
apps/node_monitoring/: .dockerignore  Cargo.toml  Dockerfile  README.md  debugger-config.toml  docker-compose.deploy.florencenet.latest.yml  docker-compose.deploy.mainnet.latest-release.yml  docker-compose.deploy.mainnet.latest.yml  docker-compose.deploy.mainnet.local.yml  docker-compose.deploy.mainnet.snapshot.latest.yml  docker-compose.tezedge_and_explorer.yml
async-ipc/: Cargo.toml
async-ipc/src/: lib.rs
async-ipc/tests/: test_ipc.rs
crypto/: Cargo.toml  README.md
crypto/src/: base58.rs  blake2b.rs  bls.rs  crypto_box.rs  hash.rs  lib.rs  nonce.rs  proof_of_work.rs  seeded_step.rs
edgekv/: .gitignore  Cargo.toml  README.md
edgekv/db-checker/: Cargo.toml
edgekv/src/: datastore.rs  edgekv.rs  errors.rs  file_ops.rs  lib.rs  schema.rs
grpc/: Cargo.toml  build.rs
grpc/proto/: README.md  tezedge.proto
grpc/proto_gen/: tezedge.rs
grpc/src/: client.rs  lib.rs  server.rs
ipc/: Cargo.toml
ipc/benches/: bench_shm.rs
ipc/src/: lib.rs
ipc/tests/: test_ipc.rs
light_node/: .gitignore  Cargo.toml  README.md  log4rs.yml
light_node/config/: identity.json  riker.toml
light_node/src/: configuration.rs  configuration_deprecated.rs  file_config.rs  identity.rs  main.rs  notification_integration.rs  slog_detailed_json.rs  snapshot_command.rs  system.rs
light_node/tests/: apply_and_verify_context_actions_from_file.rs  common.rs  integration_test.rs
logging/: Cargo.toml
logging/src/: config.rs  detailed_json.rs  file.rs  lib.rs
metrics/: Cargo.toml
metrics/src/: lib.rs  messages.rs  metrics.rs  metrics_manager.rs  monitors.rs
monitoring/: Cargo.toml  README.md
monitoring/src/: lib.rs  monitor.rs
networking/: Cargo.toml
networking/benches/: common.rs  stream_benchmark.rs
networking/src/: connection_manager.rs  lib.rs  network_channel.rs  peer.rs
networking/tests/: common.rs  encoding_ack.rs  encoding_advertise.rs  encoding_block_header.rs  encoding_current_branch.rs  encoding_current_head.rs  encoding_mempool.rs  encoding_operation.rs  encoding_operations_for_blocks.rs  encoding_peer.rs  encoding_protocol.rs  simulator.rs  stream_reader.rs  stream_writer.rs
new_node/: Cargo.toml
new_node/src/: main.rs
protocol_runner/: Cargo.toml
protocol_runner/src/: dyncov.rs  ipc_loop.rs  main.rs
rpc/: Cargo.toml  README.md  build.rs
rpc/benches/: rpc_response_benchmark.rs
rpc/openapi/: tezedge-openapi.json
rpc/src/: cache_body.rs  helpers.rs  lib.rs  rpc_actor.rs
rpc/tests/: integration_tests.rs  reward_distribution_tests.rs
sandbox/: .gitignore  Cargo.toml  README.MD  build.rs
sandbox/src/: configuration.rs  filters.rs  handlers.rs  main.rs  node_runner.rs  tezos_client_runner.rs
shell/: Cargo.toml
shell-integration/: Cargo.toml
shell-integration/src/: connector.rs  lib.rs  messages.rs  oneshot.rs  retry.rs  streaming_state.rs  threads.rs
shell/scripts/: storage_stats.rs
shell/src/: block_state.rs  block_validator.rs  chain_current_head_manager.rs  chain_feeder.rs  chain_feeder_channel.rs  chain_manager.rs  collections.rs  context_listener.rs  lib.rs  mempool_prevalidator.rs  operations_state.rs  peer_branch_bootstrapper.rs  peer_manager.rs  shell_automaton_manager.rs  shell_channel.rs  tezedge_state_manager.rs
shell/tests/: actors_apply_blocks_test.rs  apply_and_verify_context_actions_from_file.rs  chain_test.rs  context_listener_test.rs  p2p_test.rs  protocol_runner_test.rs  samples.rs
shell_automaton/: Cargo.toml  README.md
shell_automaton/src/: action.rs  config.rs  effects.rs  event.rs  lib.rs  reducer.rs  shell_compatibility_version.rs  state.rs
shell_automaton/testing/: Cargo.toml
shell_automaton/tests/: action_fuzz.rs  connection_threshold.rs  state_explorer.rs
shell_automaton_poc/: Cargo.toml  README.md
shell_automaton_poc/src/: action.rs  main.rs  state.rs
storage/: .gitignore  Cargo.toml  README.md
storage/benches/: predecessor_benchmarks.rs
storage/doc/: merkle_storage_gc.md
storage/docs/: action_recording.md  action_replaying.md  commit_log.md  merkle_storage_gc.md
storage/scripts/: actions_tool.rs  merkle_storage_stats.rs
storage/sequence/: Cargo.toml
storage/skip_list/: Cargo.toml
storage/src/: action_file.rs  action_file_storage.rs  block_meta_storage.rs  block_state.rs  block_storage.rs  chain_meta_storage.rs  compression.rs  constants_storage.rs  context.rs  context_action_storage.rs  context_meta_storage.rs  context_ram_storage.rs  context_storage.rs  cycle_eras_storage.rs  cycle_storage.rs  db.rs  kv_store.rs  kv_store_gced.rs  lib.rs  (+16 more)
storage_structure/: Cargo.toml
tezedge_proposer/: Cargo.toml
tezedge_state/: Cargo.toml  README.md
tezos_client/: Cargo.toml  README.md  build.rs
tezos_encoding/: Cargo.toml
tezos_interop/: Cargo.toml  README.md  build.rs
(+3014 files in other folders)
