cargo-features = ["named-profiles"]

[workspace]
members = [
    "crypto",
    "tezos/encoding",
    "tezos/encoding-derive",
    "fuzz/ack_message",
    "fuzz/advertise_message",
    "fuzz/block_header_message",
    "fuzz/current_branch_message",
    "fuzz/current_head_message",
    "fuzz/connection_message",
    "fuzz/metadata_message",
    "fuzz/operation_message",
    "fuzz/operations_for_blocks_message",
    "fuzz/peer_response_message",
    "fuzz/protocol_message",
]

[patch.crates-io]
ocaml-boxroot-sys = { git = "https://gitlab.com/bruno.deferrari/ocaml-boxroot.git", branch = "ocaml-410-headers" }
librocksdb-sys = { git = "https://github.com/tezedge/rust-rocksdb.git", tag = "tezedge-v2.3.0" }

[profile.fuzz]
inherits = "release"
opt-level = 3
debug = 2
debug-assertions = true  # TODO: test and disable if too slow
overflow-checks = true
lto = false
panic = "abort"
incremental = false
codegen-units = 1
