[package]
name = "async_ipc"
version = "1.15.1"
authors = ["Bruno Deferrari <bruno.deferrari@viablesystems.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
thiserror = "1.0"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.12", features = ["full"] }

[dev-dependencies]
serial_test = "0.5"
libc = "0.2.65"
