[package]
name = "async_ipc"
version = "2.3.2"
authors = ["Bruno Deferrari <bruno.deferrari@viablesystems.io>"]
edition = "2021"
rust-version = "1.58"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
thiserror = "1.0"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.19", features = ["full"] }
fuzzcheck = { git = "https://github.com/tezedge/fuzzcheck-rs.git", optional = true }

[dev-dependencies]
serial_test = "0.5"
libc = "0.2.65"

[features]
fuzzing = ["fuzzcheck"]
