[package]
name = "crypto"
version = "1.16.1"
authors = ["Tomas Sedlak <tomas.sedlak@simplestaking.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
base58 = "0.1.0"
thiserror = "1.0"
hex = "0.4"
libsecp256k1 = "0.7"
byteorder = "1.4.3"
num-bigint = { version = "0.3", features = ["serde", "rand"] }
num-traits = "0.2.8"
p256 = "0.9"
rand = "0.7.3"
sodiumoxide = "=0.2.6"
serde = { version = "1.0", features = ["derive"] }

fuzzcheck = { git = "https://github.com/tezedge/fuzzcheck-rs.git", optional = true }

[dev-dependencies]
serde_json = "1.0"


[features]
fuzzing = ["fuzzcheck"]
