[package]
name = "crypto"
version = "3.1.1"
authors = ["Tomas Sedlak <tomas.sedlak@simplestaking.com>"]
edition = "2021"
rust-version = "1.58"

[dependencies]
anyhow = "1.0"
base58 = "0.1.0"
thiserror = "1.0"
hex = "0.4"
libsecp256k1 = { version = "0.7", default-features = false, features = ["static-context"] }
byteorder = "1.4.3"
num-bigint = { version = "0.3", features = ["serde"] }
num-traits = "0.2.8"
p256 = { version = "0.9", default-features = false, features = ["ecdsa"] }
rand = { version = "0.7.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
strum = "0.20"
strum_macros = "0.20"
zeroize = { version = "1.5" }
ed25519-compact = { version ="2.0", default-features = false }
cryptoxide = { version = "0.4.4", default-features = false, features = ["sha2", "blake2"] }

fuzzcheck = { git = "https://github.com/tezedge/fuzzcheck-rs.git", optional = true }

[dev-dependencies]
serde_json = "1.0"


[features]
default = ["std"]
std = ["rand/std", "num-bigint/rand", "libsecp256k1/std", "p256/std"]
fuzzing = ["fuzzcheck"]
