[package]
name = "edgekv"
version = "1.10.0"
authors = ["mambisi <mambisi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "2.0.0-rc.1"
chrono = "0.4"
fs_extra = "1.2.0"
fs2 = "0.4.3"
thiserror = "1.0"
crc32fast = "1.2.1"
serde = { version = "1.0", features = ["derive", "rc"] }
lru-cache = "0.1.2"
bincode = "1.3.3"
[dev-dependencies]
serial_test = "0.5.1"
env_logger = "0.8.3"
log = "0.4.11"
loom = "0.5"