[package]
name = "ipc"
version = "1.7.0"
authors = ["Tomas Sedlak <tomas.sedlak@simplestaking.com>"]
edition = "2018"

[dependencies]
bincode = "1.3"
failure = "0.1"
failure_derive = "0.1"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serial_test = "0.5"
libc = "0.2.65"
ipmpsc = "0.4"