[package]
name = "ipc"
version = "1.10.0"
authors = ["Tomas Sedlak <tomas.sedlak@simplestaking.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
thiserror = "1.0"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serial_test = "0.5"
libc = "0.2.65"
ipmpsc = "0.4"