[package]
name = "light-node"
version = "1.7.0"
authors = ["Tomas Sedlak <tomas.sedlak@simplestaking.com>"]
edition = "2018"
default-run = "light-node"

[dependencies]
clap = "2.33"
failure = "0.1"
fs_extra = "1.2.0"
futures = "0.3"
jemallocator = "0.3.2"
riker = "0.4"
rlimit = "0.5"
serde_json = "1.0"
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_debug"] }
strum = "0.20"
tokio = { version = "1.8", features = ["rt-multi-thread", "signal"] }
num_cpus = "1.13"
# Local dependencies
crypto = { path = "../crypto" }
logging = { path = "../logging" }
tezos_api = { path = "../tezos/api" }
tezos_identity = { path = "../tezos/identity" }
tezos_messages = { path = "../tezos/messages" }
# TODO: split config structs to a separate crate to avoid the need to link libtezos
tezos_new_context = { path = "../tezos/new_context" }
tezos_wrapper = { path = "../tezos/wrapper" }
networking = { path = "../networking" }
storage = { path = "../storage" }
shell = { path = "../shell" }
monitoring = { path = "../monitoring" }
rpc = { path = "../rpc" }
ipc = { path = "../ipc" }
signal-hook = "0.3.9"