[package]
name = "light-node"
version = "1.9.0"
authors = ["Tomas Sedlak <tomas.sedlak@simplestaking.com>"]
edition = "2018"
default-run = "light-node"

[dependencies]
clap = "2.33"
thiserror = "1.0"
fs_extra = "1.2.0"
futures = "0.3"
jemallocator = "0.3.2"
riker = { git = "https://github.com/tezedge/riker.git", tag = "v0.4.2-cleanup-unsafe-6" }
rlimit = "0.5"
serde_json = "1.0"
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_debug"] }
strum = "0.20"
tokio = { version = "1.8", features = ["rt-multi-thread", "signal"] }
num_cpus = "1.13"
# Local dependencies
crypto = { path = "../crypto" }
logging = { path = "../logging" }
tezos_api = { path = "../tezos/api" }
tezos_identity = { path = "../tezos/identity" }
tezos_messages = { path = "../tezos/messages" }
tezos_context = { path = "../tezos/context" }
tezos_wrapper = { path = "../tezos/wrapper" }
networking = { path = "../networking" }
storage = { path = "../storage" }
shell = { path = "../shell" }
shell_integration = { path = "../shell-integration" }
monitoring = { path = "../monitoring" }
rpc = { path = "../rpc" }
ipc = { path = "../ipc" }
signal-hook = "0.3.9"