[package]
name = "light-node"
version = "1.18.0"
authors = ["Tomas Sedlak <tomas.sedlak@simplestaking.com>"]
edition = "2021"
default-run = "light-node"

[dependencies]
clap = "2.33"
thiserror = "1.0"
fs_extra = "1.2.0"
futures = "0.3"
tezedge-actor-system = { git = "https://github.com/tezedge/tezedge-actor-system.git", tag = "v0.5.0" }
tikv-jemallocator = "0.4.3"
rlimit = "0.5"
serde_json = "1.0"
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_trace"] }
strum = "0.20"
tokio = { version = "1.12", features = ["rt-multi-thread", "signal"] }
nix = "0.23"
num_cpus = "1.13"
tempfile = "3"
# Local dependencies
crypto = { path = "../crypto" }
logging = { path = "../logging" }
tezos_api = { path = "../tezos/api" }
tezos_identity = { path = "../tezos/identity" }
tezos_messages = { path = "../tezos/messages" }
tezos_context_api = { path = "../tezos/context-api" }
tezos_protocol_ipc_client = { path = "../tezos/protocol-ipc-client" }
networking = { path = "../networking" }
storage = { path = "../storage" }
shell = { path = "../shell" }
rpc = { path = "../rpc" }
async_ipc = { path = "../async-ipc" }
signal-hook = "0.3.9"
