[package]
name = "logging"
version = "1.17.0"
authors = ["Tomas Sedlak <tomas.sedlak@simplestaking.com>"]
edition = "2021"


[dependencies]
chrono = "0.4"
libflate = "1"
nix = "0.23"
serde = { version = "1.0", features = ["derive"] }
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_trace"] }
slog-json = "2.3"
slog-async = "2.6"
slog-term = "2.8"

[dev-dependencies]
tempfile = "3"
