[package]
name = "logging"
version = "2.0.1"
authors = ["Tomas Sedlak <tomas.sedlak@simplestaking.com>"]
edition = "2021"


[dependencies]
time = { version = "0.3", features = ["local-offset", "formatting"] }
libflate = "1"
nix = "0.23"
serde = { version = "1.0", features = ["derive"] }
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_trace"] }
slog-json = "2.6"
slog-async = "2.6"
slog-term = "2.9"

[dev-dependencies]
tempfile = "3"
