[package]
name = "metrics"
version = "0.1.0"
authors = ["Martin Lacko <mrt.lacko@gmail.com>"]
edition = "2018"

[dependencies]
storage = { path = "../storage" }
riker = { git = "https://github.com/riker-rs/riker" }
networking = { path = "../networking" }
failure = "0.1.5"
rocksdb = "0.12.3"
chrono = "0.4"
ws = "*"
tokio = "0.2.0-alpha.4"
serde = "1.0"
serde_json = "1.0.40"
