[package]
name = "monitoring"
version = "1.18.1"
authors = ["Martin Lacko <martin.lacko@simplestaking.com>"]
edition = "2021"

[dependencies]
erased-serde = "0.3"
tezedge-actor-system = { git = "https://github.com/tezedge/tezedge-actor-system.git", tag = "v0.5.0" }
serde = "1.0"
serde_json = "1.0"
slog = { version = "2.7", features = ["nested-values", "max_level_trace", "release_max_level_trace"] }
slog_derive = "0.1.1"
# local dependencies
crypto = { path = "../crypto" }
networking = { path = "../networking" }
shell = { path = "../shell" }
tezos_messages = { path = "../tezos/messages" }
tokio = { version = "1.12", features = ["full"] }
tokio-stream = "0.1.2"
futures = { version = "0.3", default-features = false }
warp = "0.3"
uuid = { git = "https://github.com/tezedge/uuid", tag = "v0.8.2-cleanup-unsafe-1", default-features = false, features = ["v4"] }
storage = { path = "../storage" }

[dev-dependencies]
rand = "0.7.3"
