[package]
name = "protocol-runner"
version = "1.7.0"
authors = ["Tomas Sedlak <tomas.sedlak@simplestaking.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
ctrlc = "3.1.3"
failure = "0.1"
failure_derive = "0.1"
jemallocator = "0.3.2"
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_debug"] }
slog-async = "2.6"
slog-term = "2.8"
# local dependencies
crypto = { path = "../crypto" }
tezos_api = { path = "../tezos/api" }
tezos_client = { path = "../tezos/client" }
tezos_interop = { path = "../tezos/interop" }
tezos_wrapper = { path = "../tezos/wrapper" }
tezos_messages = { path = "../tezos/messages" }