[package]
name = "protocol-runner"
version = "1.18.1"
authors = ["Tomas Sedlak <tomas.sedlak@simplestaking.com>"]
edition = "2021"

[dependencies]
clap = "2.33"
ctrlc = "3.1.3"
thiserror = "1.0"
tikv-jemallocator = "0.4.3"
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_debug"] }
slog-async = "2.6"
slog-term = "2.9"
# local dependencies
crypto = { path = "../crypto" }
tezos_api = { path = "../tezos/api" }
tezos_context = { path = "../tezos/context" }
tezos_context_api = { path = "../tezos/context-api" }
tezos_interop = { path = "../tezos/interop" }
tezos_messages = { path = "../tezos/messages" }
