[package]
name = "rpc"
version = "1.8.0"
authors = ["Martin Lacko <martin.lacko@simplestaking.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
getset = "0.1"
failure = "0.1"
futures = "0.3"
hex = "0.4"
hyper = { version = "0.14", features = ["server", "http1", "http2", "stream", "tcp", "runtime"] }
itertools = "0.10"
path-tree = "0.1.9"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
slog = { version = "2.7", features = ["nested-values", "max_level_trace", "release_max_level_debug"] }
tokio = { version = "1.8", features = ["time"] }
url = "2.2"
rusqlite = "0.25.1"
cached = "0.23"
bincode = "1.3"
# local dependencies
crypto = { path = "../crypto" }
shell = { path = "../shell" }
storage = { path = "../storage" }
tezos_api = { path = "../tezos/api" }
tezos_messages = { path = "../tezos/messages" }
tezos_timing = { path = "../tezos/timing" }
tezos_wrapper = { path = "../tezos/wrapper" }
tezos_context = { path = "../tezos/context" }

[dev-dependencies]
assert-json-diff = { git = "https://github.com/tezedge/assert-json-diff.git", tag = "v2.0.1-public-diff-module" }
strum = "0.20"
strum_macros = "0.20"
lazy_static = "1.4"
rand = "0.7.3"
hyper = { version = "0.14", features = ["client"] }
tokio = { version = "1.8", features = ["macros"] }
