[package]
name = "rpc"
version = "1.18.1"
authors = ["Martin Lacko <martin.lacko@simplestaking.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0"
time = { version = "0.3", features = ["serde"] }
getset = "0.1"
thiserror = "1.0"
futures = "0.3"
hex = "0.4"
hyper = { version = "0.14", features = ["server", "http1", "http2", "stream", "tcp", "runtime"] }
itertools = "0.10"
num = "0.4"
path-tree = "0.1.9"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
slog = { version = "2.7", features = ["nested-values", "max_level_trace", "release_max_level_trace"] }
tokio = { version = "1.12", features = ["time"] }
tokio-stream = { version = "0.1.8" }
url = "2.2"
rusqlite = "0.25.1"
cached = "0.23"
bincode = "1.3"
# local dependencies
async_ipc = { path = "../async-ipc" }
crypto = { path = "../crypto" }
# TODO: once full integration is done, remove shell dependency from here
networking = { path = "../networking" }
shell = { path = "../shell" }
shell_integration = { path = "../shell-integration" }
shell_automaton = { path = "../shell_automaton" }
storage = { path = "../storage" }
tezos_api = { path = "../tezos/api" }
tezos_messages = { path = "../tezos/messages" }
tezos_timing = { path = "../tezos/timing" }
tezos_context_api = { path = "../tezos/context-api" }
tezos_context_ipc_client = { path = "../tezos/context-ipc-client" }
tezos_protocol_ipc_client = { path = "../tezos/protocol-ipc-client" }

[dev-dependencies]
assert-json-diff = { git = "https://github.com/tezedge/assert-json-diff.git", tag = "v2.0.1-public-diff-module" }
strum = "0.20"
strum_macros = "0.20"
lazy_static = "1.4"
rand = "0.7.3"
hyper = { version = "0.14", features = ["client"] }
tokio = { version = "1.12", features = ["macros"] }
