[package]
name = "sandbox"
version = "1.1.0"
authors = ["Adrian Nagy <adrian.nagy@simplestaking.com>"]
edition = "2018"
default-run = "sandbox"

[dependencies]
clap = "2.33"
failure = "0.1"
itertools = "0.10"
nix = "0.19"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
slog = { version = "2.7", features = ["nested-values"] }
slog-async = "2.6"
slog-term = "2.6"
tokio = { version = "1.2", features = ["full"] }
warp = "0.3"
wait-timeout = "0.2"

[build-dependencies]
colored = "2.0"
hex = "0.4"
os_type = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
