[package]
name = "sandbox"
version = "3.1.1"
authors = ["Adrian Nagy <adrian.nagy@simplestaking.com>"]
edition = "2021"
rust-version = "1.58"
default-run = "sandbox"

[dependencies]
anyhow = "1.0"
clap = "2.33"
thiserror = "1.0"
itertools = "0.10"
nix = "0.23"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
slog = { version = "2.7", features = ["nested-values", "max_level_trace", "release_max_level_trace"] }
slog-async = "2.6"
slog-term = "2.9"
tokio = { version = "1.19", features = ["full"] }
warp = "0.3"
wait-timeout = "0.2"
# local dependencies
tezos_api = { path = "../tezos/api" }

[build-dependencies]
colored = "2.0"
hex = "0.4"
os_type = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
