[package]
name = "shell_integration"
version = "1.9.0"
authors = ["Branislav Kontur <branislav.kontur@viablesystems.io>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = "1.0"
serde_json = "1.0"
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_debug"] }

# local dependencies
crypto = { path = "../crypto" }
storage = { path = "../storage" }
tezos_api = { path = "../tezos/api" }
tezos_messages = { path = "../tezos/messages" }