[package]
name = "shell_integration"
version = "2.3.5"
authors = ["Branislav Kontur <branislav.kontur@viablesystems.io>"]
edition = "2021"
rust-version = "1.58"

[dependencies]
anyhow = "1.0"
futures = "0.3"
thiserror = "1.0"
serde = "1.0"
serde_json = "1.0"
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_trace"] }
uuid = { git = "https://github.com/tezedge/uuid", tag = "v0.8.2-cleanup-unsafe-1", default-features = false, features = ["v4"] }

# local dependencies
crypto = { path = "../crypto" }
storage = { path = "../storage" }
tezos_api = { path = "../tezos/api" }
tezos_messages = { path = "../tezos/messages" }