[package]
name = "shell"
version = "0.9.1"
authors = ["Tomas Sedlak <tomas.sedlak@simplestaking.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
dns-lookup = "1.0.1"
failure = "0.1"
futures = "0.3"
hex = "0.4"
itertools = "0.9"
lazy_static = "1.4"
nix = "0.19"
page_size = "0.4.1"
rand = "0.7.3"
regex = "1.3.1"
riker = "0.4"
slog = "2.5"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["time", "tcp", "rt-threaded"] }
# local dependencies
crypto = { path = "../crypto" }
networking = { path = "../networking" }
storage = { path = "../storage" }
tezos_api = { path = "../tezos/api" }
tezos_context = { path = "../tezos/context" }
tezos_identity = { path = "../tezos/identity" }
tezos_messages = { path = "../tezos/messages" }
tezos_wrapper = { path = "../tezos/wrapper" }

[dev-dependencies]
r2d2 = "0.8.9"
serial_test = "0.5"
slog-async = "2.5"
slog-term = "2.6"
tezos_encoding = { path = "../tezos/encoding" }
zip = "0.5.5"
# TODO: TE-224 - this is not used directly, but test which using PROTOCOL_RUNNER fails without that (tezos_interop can be also replaced with tezos_client, and still works)
tezos_interop = { path = "../tezos/interop" }