[package]
name = "shell"
version = "1.8.0"
authors = ["Tomas Sedlak <tomas.sedlak@simplestaking.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
dns-lookup = "1.0.1"
failure = "0.1"
futures = "0.3"
getset = "0.1"
hex = "0.4"
itertools = "0.10"
lazy_static = "1.4"
merge = "0.1"
nix = "0.19"
page_size = "0.4.1"
rand = "0.7.3"
regex = "1.5"
riker = "0.4"
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_debug"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.8", features = ["time"] }
mio = { version = "0.7.11", features = ["os-poll", "net"] }
# local dependencies
crypto = { path = "../crypto" }
networking = { path = "../networking" }
storage = { path = "../storage" }
tezos_api = { path = "../tezos/api" }
tezos_identity = { path = "../tezos/identity" }
tezos_messages = { path = "../tezos/messages" }
tezos_context = { path = "../tezos/context" }
tezos_wrapper = { path = "../tezos/wrapper" }
tla-sm = { path = "../tla_sm" }
tezedge-state = { path = "../tezedge_state" }

[dev-dependencies]
r2d2 = "0.8.9"
serial_test = "0.5"
slog-async = "2.6"
slog-term = "2.8"
fs_extra = "1.2.0"
zip = "0.5.5"
tokio = { version = "1.8", features = ["sync"] }
nom = "6.1"
tezos_encoding = { path = "../tezos/encoding" }
# TODO: TE-224 - this is not used directly, but test which using PROTOCOL_RUNNER fails without that (tezos_interop can be also replaced with tezos_client, and still works)
ipc = { path = "../ipc" }
tezos-sys = { path = "../tezos/sys" }

old_networking = { path = "../old_networking" }