[package]
name = "shell_automaton"
version = "3.0.0"
edition = "2021"
rust-version = "1.58"

[dev-dependencies]
assert-json-diff = { git = "https://github.com/tezedge/assert-json-diff.git", tag = "v2.0.1-public-diff-module" }

[dependencies]
bytes = "1.0.1"
hex = "0.4"
slab = { version = "0.4.3", features = ["serde"] }
rand = "0.7.3"
mio = { version = "0.7.13", features = ["os-poll", "net"] }
dns-lookup = "1.0.1"
derive_more = "0.99.16"
enum-kinds = "0.5.1"
tokio = { version = "1.19", features = ["time", "rt-multi-thread"] }
nix = "0.23"
rmp = "0.8.10"
rmp-serde = "0.15.5"
tezedge-actor-system = { git = "https://github.com/tezedge/tezedge-actor-system.git", tag = "v0.5.0" }
getset = "0.1"
nom = "6.1"
reqwest = { version = "0.11.8", features = ["blocking", "stream"] }
url = { version = "2.2.2" }

thiserror = "1.0"
anyhow = "1.0"
bincode = "1.3"
derive_builder = "0.9"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
slog = { version = "2.7", features = ["max_level_trace", "release_max_level_trace"] }
strum = "0.20"
strum_macros = "0.20"

redux-rs = { git = "https://github.com/tezedge/redux-rs.git", rev = "56e116d", features = ["serde"] }

crypto = { path = "../crypto" }
storage = { path = "../storage" }
networking = { path = "../networking" }
tezos_encoding = { path = "../tezos/encoding" }
tezos_identity = { path = "../tezos/identity" }
tezos_messages = { path = "../tezos/messages" }
tezos_api = { path = "../tezos/api" }
async_ipc = { path = "../async-ipc" }
tezos_context_api = { path = "../tezos/context-api" }
tezos_protocol_ipc_client = { path = "../tezos/protocol-ipc-client" }
tezos_protocol_ipc_messages = { path = "../tezos/protocol-ipc-messages" }

fuzzcheck = { git = "https://github.com/tezedge/fuzzcheck-rs.git", optional = true }
fuzzcheck_mutators_derive = { git = "https://github.com/tezedge/fuzzcheck-rs.git", optional = true }

once_cell = "1.8.0"
ureq = "2.4.0"
num-bigint = "0.3"

enum_dispatch = "0.3.7"

[features]
fuzzing = [
    "fuzzcheck",
    "fuzzcheck_mutators_derive",
    "redux-rs/fuzzing",
    "crypto/fuzzing",
    "storage/fuzzing",
    "tezos_encoding/fuzzing",
    "tezos_identity/fuzzing",
    "tezos_messages/fuzzing",
    "tezos_api/fuzzing",
    "tezos_context_api/fuzzing",
    "tezos_protocol_ipc_client/fuzzing",
    "tezos_protocol_ipc_messages/fuzzing",
    "async_ipc/fuzzing"
    ]
