[package]
name = "shell_automaton_poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.6.1"
derive_more = "0.99.0"
enum_dispatch = "0.3.7"
mio = { version = "0.7.13", features = ["os-poll", "net"] }


crypto = { path = "../crypto" }
networking = { path = "../networking" }
tezos_encoding = { path = "../tezos/encoding" }
tezos_identity = { path = "../tezos/identity" }
tezos_messages = { path = "../tezos/messages" }